Bugfix favoris au milieu de la page quand resize
> Quand je suis en pleine fenêtre et que je passe en fenêtre réduite c'est là que le bloc forums préférés/sous-forums merde et se fou en plein millieu du coup je suis obligé de refresh toutes les pages JVF.

--- a/public/style.css
+++ b/public/style.css
@@ -276,6 +276,12 @@ h1, h2, h3 {
   display: none;
 }
 
+@media (min-width: 1025px) {
+  #forums_pref.loaded, #topics_pref.loaded {
+    display: block;
+  }
+}
+
 .slider.sliding {
   position: fixed;
   top: 15px;
