Taille des smileys dans le CSS
Pour pas que les messages changent de taille après que les smileys aient chargés

Sur la liste des smileys :
var x = '';$($0.getElementsByTagName('img')).each(function(_, elem) {if (elem.width == 16 && elem.height == 16) return; x += ('.smiley--' + elem.src.split('/').pop().split('.').shift() + ' { ' + (elem.width != 16 ? (elem.width<16?'min-':'')+'width: ' + elem.width + 'px; ' : '') +  (elem.height != 16 ? (elem.height<16?'min-':'')+'height: ' + elem.height + 'px; ' : '') + '} /* ' + elem.dataset.code + ' */'+"\n")}); x

--- a/public/style.css
+++ b/public/style.css
@@ -1350,10 +1350,46 @@ h1, h2, h3 {
   height: 35px;
 }
 
-.message .smiley {
+.smiley {
   min-width: 16px;
   min-height: 16px;
 }
+
+.smiley--17 { min-height: 12px; } /* :gba: */
+.smiley--69 { height: 17px; } /* :bravo: */
+.smiley--nyu { height: 17px; } /* :cute: */
+.smiley--2 { width: 26px; height: 24px; } /* :question: */
+.smiley--54 { width: 21px; height: 20px; } /* :coeur: */
+.smiley--27 { width: 23px; height: 26px; } /* :sleep: */
+.smiley--36 { width: 24px; } /* :ok: */
+.smiley--66 { width: 26px; height: 21px; } /* :fete: */
+.smiley--60 { width: 31px; height: 24px; } /* :ange: */
+.smiley--61 { width: 35px; height: 20px; } /* :diable: */
+.smiley--62 { height: 27px; } /* :gni: */
+.smiley--play { width: 19px; height: 28px; } /* :play: */
+.smiley--65 { width: 47px; height: 39px; } /* :desole: */
+.smiley--63 { width: 50px; height: 34px; } /* :spoiler: */
+.smiley--58 { width: 44px; height: 40px; } /* :merci: */
+.smiley--59 { width: 50px; height: 39px; } /* :svp: */
+.smiley--56 { width: 50px; height: 34px; } /* :sors: */
+.smiley--42 { width: 46px; height: 41px; } /* :salut: */
+.smiley--38 { width: 50px; height: 34px; } /* :rechercher: */
+.smiley--29 { width: 45px; height: 41px; } /* :hello: */
+.smiley--44 { width: 37px; height: 42px; } /* :up: */
+.smiley--48 { width: 44px; height: 42px; } /* :bye: */
+.smiley--51 { width: 65px; height: 46px; } /* :gne: */
+.smiley--32 { width: 37px; height: 44px; } /* :lol: */
+.smiley--49 { width: 64px; height: 44px; } /* :dpdr: */
+.smiley--52 { width: 58px; height: 57px; } /* :dehors: */
+.smiley--64 { width: 51px; height: 32px; } /* :hs: */
+.smiley--70 { width: 49px; height: 42px; } /* :banzai: */
+.smiley--cimer { width: 57px; height: 36px; } /* :cimer: */
+.smiley--ddb { width: 49px; height: 40px; } /* :ddb: */
+.smiley--pave { width: 51px; height: 43px; } /* :pave: */
+.smiley--objection { width: 54px; height: 34px; } /* :objection: */
+.smiley--siffle { width: 22px; } /* :siffle: */
+.smiley--loveyou { width: 64px; height: 30px; } /* :loveyou: */
+.smiley--hapoelparty { width: 45px; height: 27px; } /* :hapoelparty: */
 
 
 @media (min-width: 1025px) {
