--- a/public/style_notconnected.css
+++ b/public/style_notconnected.css
@@ -1,7 +1,22 @@
+html {
+  display: table;
+  width: 100%;
+  height: 100%;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
 body {
   font: 16px/1.45 -apple-system, sans-serif;
   margin: 0;
   background: #eeeef0;
+  overflow-y: scroll;
+  -webkit-text-size-adjust: 100%;
 }
 
 @media (min-width: 360px) {
@@ -192,12 +207,133 @@ body {
   background: #007aff;
 }
 
-.article__legalese {
+.legalese {
   font-size: .75em;
   text-align: center;
   margin: 50px 0 20px;
 }
 
-.article__legalese-link {
+.legalese--close {
+  margin-top: 20px;
+}
+
+.legalese__link {
   color: inherit;
+}
+
+/* CONNEXION */
+
+@media (min-width: 600px) {
+  .body--connexion {
+    display: table-cell;
+    width: 100%;
+    height: 100%;
+    vertical-align: middle;
+  }
+}
+
+.connexion-bloc {
+  background: white;
+  border: 0 solid rgba(0,0,0,.25);
+  border-bottom-width: 1px;
+  box-shadow: 0 2px 20px rgba(0,0,0,.1);
+  margin: auto;
+  padding: 10px 24px 20px;
+}
+
+@media (min-width: 600px) {
+  .connexion-bloc {
+    margin-top: 30px;
+    border-radius: 10px;
+    border-width: 1px;
+    width: 580px;
+    padding: 30px 40px;
+  }
+}
+
+.connexion-bloc__title {
+  font-size: 1.45em;
+  margin-top: 0;
+}
+
+.login-instructions {
+  margin-top: -.5em;
+}
+
+.connect-form__input {
+  display: block;
+  margin: .5em 0;
+  width: 100%;
+  font-size: 1.5em;
+  border: 1px solid #9c0;
+  border-radius: 1px;
+  box-shadow: inset 0 1px 3px rgba(153, 204, 0, .3);
+  -webkit-appearance: none;
+  padding: 2px 5px;
+  font-family: inherit;
+}
+
+.connect-form__input:focus {
+  background: hsl(75, 100%, 95%);
+  outline: none;
+}
+
+.connect-form__submit {
+  display: block;
+  background: #288FFF;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 3px 5px rgba(0,0,0,.2);
+  padding: .75em 0;
+  font-size: 1em;
+  margin: 1em 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  -webkit-appearance: none;
+  font-family: inherit;
+}
+
+.connect-form__submit:hover {
+  box-shadow: 0 3px 10px rgba(0,0,0,.3);
+  background: #007aff;
+}
+
+.login-disclaimer {
+  font-size: .75em;
+  margin-bottom: 0;
+}
+
+.connexion-disclaimer {
+  width: 100%;
+  padding: 10px 24px;
+}
+
+@media (min-width: 600px) {
+  .connexion-disclaimer {
+    width: 580px;
+    margin: auto;
+    padding: 10px 40px;
+  }
+}
+
+.connexion-disclaimer__title {
+  font-size: 1.2em;
+}
+
+.connexion-disclaimer__copy {
+  font-size: .9em;
+}
+
+@media (min-width: 600px) {
+  .connexion-disclaimer__copy {
+    font-size: 1em;
+  }
+}
+
+.mandatory-login-proof {
+  text-decoration: none;
+  color: #288FFF;
 }
