--- a/public/style.css
+++ b/public/style.css
@@ -822,26 +822,51 @@ h1, h2, h3 {
 /* BOUTONS */
 
 .button {
-  background: #00e676;
-  color: white;
   font-weight: bold;
   padding: 5px 8px;
   border-radius: 3px;
   letter-spacing: .5px;
   cursor: pointer;
-  text-shadow: 0 0 2px #00c853;
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,.1);
   text-transform: uppercase;
   font-size: .9em;
   -webkit-tap-highlight-color: transparent;
   -webkit-transition: all .1s ease-out;
           transition: all .1s ease-out;
+
+  color: #2196f3;
 }
 
 .button:hover {
+  color: #1976d2;
+}
+
+
+.button--cta {
+  background: #00e676;
+  color: white;
+  text-shadow: 0 0 2px #00c853;
+}
+
+.button--cta:hover {
   background: #69f0ae;
+  color: white;
   text-shadow: 0 0 2px #00e676;
+}
+
+
+.button--raised {
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.1);
+}
+
+.button--raised:hover {
   box-shadow: 0 3px 8px 0 rgba(0,0,0,.15);
+}
+
+
+@media (min-width: 560px) {
+  .button--scale {
+    padding: 7px 12px;
+  }
 }
 
 /* TOPIC */
@@ -872,9 +897,17 @@ h1, h2, h3 {
 
 .pagination-topic {
   display: table;
-  width: 100%;
   margin: 1em 10px;
-  width: calc(100% - 20px);
+  width: 100%;
+  width: -webkit-calc(100% - 20px);
+  width:         calc(100% - 20px);
+}
+
+@media (min-width: 1025px) {
+  .pagination-topic {
+    margin: 1em 0;
+    width: 100%;
+  }
 }
 
 .pagination-topic__action-button {
@@ -895,6 +928,14 @@ h1, h2, h3 {
   line-height: 30px;
   font-size: .95em;
   border-radius: 9em;
+}
+
+@media (min-width: 560px) {
+  .pagination-topic__page {
+    min-width: 44px;
+    height: 44px;
+    line-height: 44px;
+  }
 }
 
 .pagination-topic__page-link {
@@ -924,79 +965,6 @@ h1, h2, h3 {
 .pagination-topic--bottom .pagination-topic__page-link--next {
   font-weight: bold;
   font-size: 1.2em;
-}
-
-
-
-.pages {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.pages-forum {
-  text-align: right;
-  margin-bottom: 0;
-  margin-top: 10px;
-}
-
-.pages-left {
-  float: left;
-}
-
-.pages-container {
-  display: inline-block;
-  text-align: center;
-}
-
-.pages .faketable {
-  display: table;
-  height: 45px;
-  width: 45px;
-  float: left;
-  margin-left: 5px;
-}
-
-@media (MAX-width: 700px) {
-  .pages .faketable {
-    width: 30px;
-    height: 30px;
-  }
-  .pages .faketable.empty {
-    display: none;
-  }
-}
-
-.pages .link {
-  display: table-cell;
-  vertical-align: middle;
-  width: 100%;
-  border-radius: 99px;
-  font-size: 15px;
-  padding: 2px;
-}
-
-.pages :visited {
-  color: #888;
-}
-
-.pages a:hover {
-  background: #eee;
-}
-
-.pages-bottom .next-page {
-  font-size: 1.2em;
-  font-weight: bold;
-}
-
-.pages .active {
-  background: #f60;
-  color: white;
-  font-weight: bold;
-}
-
-.pages .active:hover {
-  background: #f60;
-  color: white !important;
 }
 
 /* TOPIC - Messages */
@@ -1585,28 +1553,6 @@ h1, h2, h3 {
 
 .message:target {
   background: rgba(255, 85, 0, .07);
-}
-
-/* TOPIC - Boutons en bas */
-
-.bottom-back-buttons {
-  padding: 10px;
-  display: table;
-  width: 100%;
-}
-
-@media (min-width: 1025px) {
-  .bottom-back-buttons {
-    padding: 10px 0;
-  }
-}
-
-.bottom-back-buttons span {
-  display: table-cell;
-}
-
-.bottom-back-buttons span.align-right {
-  text-align: right;
 }
 
 /* FORUM/TOPIC - Couleurs pseudos modos/admins */
