--- a/public/style.css
+++ b/public/style.css
@@ -1323,15 +1323,6 @@ h1, h2, h3 {
   background-image: url(/images/edit.svg);
 }
 
-/* TOPIC - Message - edit */
-
-@media (MAX-width: 1024px) {
-  #editmessage {
-    margin-left: -10px;
-    width: calc(100% + 20px);
-  }
-}
-
 /* TOPIC - Message - border */
 
 .message-border {
@@ -1729,6 +1720,11 @@ h1, h2, h3 {
 .form__action--submit {
   text-align: center;
   width: 60%;
+}
+
+#editmessage {
+  width: 100%;
+  height: 170px;
 }
 
 /* FOOTER */
