--- a/public/style.css
+++ b/public/style.css
@@ -18,6 +18,7 @@ body {
   color: #333;
   -webkit-text-size-adjust: 100%;
   padding-bottom: 15px;
+  background: #eee;
 }
 
 .body--no-bottom {
@@ -118,7 +119,7 @@ h1, h2, h3 {
 /* SHEET */
 
 .sheet {
-  background: white;
+  background: #eee;
   border: solid black;
   border-width: 1px 0 0;
   padding: 5px 0 10px;
@@ -987,7 +988,7 @@ h1, h2, h3 {
 }
 
 .pagination-topic__page-link:visited {
-  color: #757575;
+  color: #616161;
 }
 
 .pagination-topic__page-link:hover {
@@ -1011,45 +1012,31 @@ h1, h2, h3 {
 
 /* TOPIC - Messages */
 
-@media (min-width: 1025px) {
-  .liste-messages {
-    margin: 0 -30px;
-  }
-}
-
 .message {
   font-size: 14px;
-  border: solid #d1d1d1;
-  border-width: 1px 0;
-  background: #f9f9f9;
-  margin-bottom: 10px;
+  background: white;
+  margin: 0 8px 10px;
   position: relative;
+  border-radius: 2px;
+  box-shadow: 0 1px 2px rgba(0,0,0,.2);
   -webkit-tap-highlight-color: transparent;
+  border: 1px solid transparent; /* pour prendre en compte margin de .contentest > p */
 }
 
 @media (min-width: 768px) {
   .message {
-    margin-bottom: 13px;
+    margin: 0 10px 13px;
   }
 }
 
 @media (min-width: 1025px) {
   .message {
-    border: initial;
-    background: initial;
-    margin-bottom: initial;
+    margin: 0 0 14px;
   }
 }
 
 .message.even {
-  background: #EFF4FC;
-  border-color: #C0D7ED;
-}
-
-@media (min-width: 1025px) {
-  .message.even {
-    background: initial;
-  }
+  background: hsl(209, 56%, 94%);
 }
 
 .message-header {
@@ -1112,10 +1099,6 @@ h1, h2, h3 {
 
 @media (min-width: 1025px) {
   .message .meta-author .author {
-    font-size: 110%;
-    line-height: 1;
-    margin-bottom: 2px;
-    color: #111;
     word-wrap: break-word;
     padding: 0 3px;
   }
@@ -1206,8 +1189,8 @@ h1, h2, h3 {
 
     float: right;
     position: absolute;
-    right: 36px;
-    top: -5px;
+    right: 5px;
+    top: -6px;
   }
 }
 
@@ -1239,18 +1222,15 @@ h1, h2, h3 {
 
 @media (min-width: 1025px) {
   .message .meta-actions .meta-permalink {
-    background: hsl(217, 68%, 98%);
+    background: white;
+    box-shadow: 0 1px 2px rgba(0,0,0,.2);
     padding: 2px 4px;
     color: #333;
-
-    border: 1px solid rgba(192, 215, 237, .8);
     border-radius: 2px;
   }
 
-  .message.odd .meta-actions .meta-permalink {
-    background: hsl(0, 0%, 99%);
-
-    border-color: rgba(209, 209, 209, .8);
+  .message.even .meta-actions .meta-permalink {
+    background: hsl(209, 56%, 95%);
   }
 }
 
@@ -1376,12 +1356,8 @@ h1, h2, h3 {
 
 @media (min-width: 1025px) {
   .message .content {
-    width: 83%;
-    width: calc(85% - 30px);
+    width: 85%;
     float: left;
-    border: 1px solid #d1d1d1;
-    background: #F9F9F9;
-    margin-bottom: 12px;
     padding: 0 .5em;
     color: #111;
   }
@@ -1401,6 +1377,12 @@ h1, h2, h3 {
   border-left: 3px solid rgba(33,150,243,.25); /* Blue 500 */
   padding: 1px 6px;
   background: rgba(33,150,243,.03);
+}
+
+@media (min-width: 768px) {
+  .message .blockquote-jv {
+    padding-right: 10px;
+  }
 }
 
 .message .contentest > .blockquote-jv {
@@ -1523,14 +1505,6 @@ h1, h2, h3 {
   height: 140px;
 }
 
-
-@media (min-width: 1025px) {
-  .message.even .content {
-    background: #EFF4FC;
-    border-color: #C0D7ED;
-  }
-}
-
 .actions-desktop {
   display: none;
 }
@@ -1539,8 +1513,8 @@ h1, h2, h3 {
   .actions-desktop {
     display: block;
     position: absolute;
-    bottom: 5px;
-    right: 29px;
+    bottom: -2px;
+    right: 3px;
   }
 }
 
@@ -1673,9 +1647,9 @@ h1, h2, h3 {
 
 .form {
   width: 100%;
-  background: #f7f7f7;
-  padding: 7px;
-  border: 0 solid #acacac;
+  background: #E0E0E0;
+  padding: 8px;
+  border: 0 solid #bdbdbd;
   border-top-width: 1px;
 }
 
@@ -1687,17 +1661,27 @@ h1, h2, h3 {
   .form {
     border-width: 1px;
     border-radius: 4px;
+    box-shadow: 0 1px 4px rgba(0,0,0,.2)
   }
 }
 
 .form__errors {
   display: none;
-  color: #d32f2f;
-  background: #ffebee;
-  padding: 1px 1em;
-  margin-bottom: .5em;
-  border: 1px solid #f7b4b6; /* Red 150 */
-  border-radius: 2px;
+  color: #E53935;
+  padding: 5px 2px 10px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+@media (min-width: 1025px) {
+  .form__errors {
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+}
+
+.form__errors p {
+  margin: 0;
 }
 
 .form__errors.shown {
